Tried using a non-existing version of a plugin

--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
 			<plugin>
 				<groupId>com.github.goldin</groupId>
 				<artifactId>copy-maven-plugin</artifactId>
-				<version>0.3-SNAPSHOT</version>
+				<version>0.2.5</version>
 				<executions>
 					<execution>
 						<id>setup-workspace</id>
